<resources>
    <string name="app_name">ProyectoPrograV</string>
    <string name="lbltittle">PaseandoCR</string>
    <string name="lbluser">Usuario</string>
    <string name="txtuser">Ingrese su usuario</string>
    <string name="lblpass">Contraseña</string>
    <string name="txtpass">Ingrese su contraseña</string>
    <string name="lblpassrec">Olvidó su contraseña?</string>
    <string name="lblinvite">continuar como invitado</string>
    <string name="lblinfo">Acerca de | Contáctanos | Políticas</string>
    <string name="lblCopy">Copyright 2022 Derechos Reservados</string>
    <string name="lblemail">Correo Electrónico</string>
    <string name="txtemail">Ingrese su correo electrónico</string>
    <string name="lblconfirmpass">Confirmar Contraseña</string>
    <string name="txtconfirmpass">Confirme su contraseña</string>
    <string name="lblregister">Registrarse con:</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Andrea Villalobos</string>
    <string name="nav_header_subtitle">AndreVilla123@outlook.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Explorar</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Favoritos</string>
    <string name="menu_info">Acerca de</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_place">Lugares</string>
    
    <!-- Datos Pefil-->

    <string name="PerfilUsuario">Perfil de Usuario</string>
    <string name="NombreUsuario">Nombre de Usuario:</string>
    <string name="Correo">Correo Electronico:</string>
    <string name="Contrasena">Contraseña:</string>
    <string name="botonGuardar">Guardar</string>


    <!-- Acerca de -->

    <string name="AcercaDe">Acerca de</string>

    <!-- Favoritos -->

    <string name="Favoritos">Favoritos</string>

    <!-- Configuracion -->

    <string name="Configuracion">Configuración</string>
    <string name="ModoOscuro">Modo Oscuro</string>
    <string name="Brillo">Brillo</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="Idioma">Idioma</string>
    <string name="Ayuda">Ayuda</string>
</resources>
