<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

<!--    <TextView-->
<!--        android:id="@+id/text_gallery"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent" />-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B9DDBE"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/PerfilUsuario"
                android:fontFamily="@font/playfairdisplay_bold"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:textSize="35dp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <!--Imagen del perfil de usuario-->
            <androidx.appcompat.widget.AppCompatImageView
                android:fontFamily="@font/playfairdisplay_bold"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/perfilmujer"/>

            <TextView
                android:text="@string/NombreUsuario"
                android:fontFamily="@font/playfairdisplay_bold"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="left"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:text="@string/Correo"
                android:fontFamily="@font/playfairdisplay_bold"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="left"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/Contrasena"
                android:fontFamily="@font/playfairdisplay_bold"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="left"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="35dp"
                android:fontFamily="@font/playfairdisplay_regular"
                android:hint="Digite su nueva contrasena"
                android:textSize="20dp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="35dp"
                android:fontFamily="@font/playfairdisplay_regular"
                android:hint="Repita su nueva contrasena"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfairdisplay_bold"
                android:text="@string/botonGuardar"
                android:textSize="20dp"
                android:textColor="#ffff"
                android:background="#168F29"
                android:layout_marginTop="65dp"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"

                />


        </androidx.appcompat.widget.LinearLayoutCompat>




    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

